# flet_sherpa_onnx

./: .gitignore  AGENTS.md  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pip.yml  release.yml
docs/: FletSherpaOnnx.md  index.md
examples/flet_sherpa_onnx_example/: pyproject.toml
examples/flet_sherpa_onnx_example/src/: main.py
src/flet_sherpa_onnx/: flet_sherpa_onnx.py
src/flutter/flet_sherpa_onnx/: pubspec.yaml
src/flutter/flet_sherpa_onnx/lib/src/: fletsherpaonnx.dart  wavfileprocessor.dart
