[project]
name = "flet-sherpa-onnx"
version = "0.2.1"
description = "FletSherpaOnnx control for Flet"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "SamYuan", email = "yy19902439@126.com" }
]
dependencies = [
    "flet (>=0.70.0.dev0)",
]

[project.urls]
Homepage = "https://github.com/SamYuan1990/flet-sherpa-onnx"
Documentation = "https://zread.ai/SamYuan1990/flet_sherpa_onnx"
Repository = "https://github.com/SamYuan1990/flet-sherpa-onnx"
Issues = "https://github.com/SamYuan1990/flet-sherpa-onnx/issues"

[tool.setuptools.package-data]
"flutter.flet_sherpa_onnx" = ["**/*"]

[dependency-groups]
test = [
    "pytest >=7.2.0",
]
lint = [
    "ruff >=0.11.7",
]
dev = [
    "pre-commit >=4.2.0",
    { include-group = 'lint' },
    { include-group = 'test' },
]
all = [
    { include-group = 'dev' },
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py39"
fix = true
show-fixes = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I"
]
preview = true
pydocstyle = { convention = 'google' }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
